--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -51,6 +51,41 @@
       ${prevnext_nav('Ticket', 'Back to Query')}
     </div>
 
+    <py:def function="display_change(change)">
+      <ul py:if="change.fields" class="changes">
+        <li py:for="field_name, field in change.fields.items()"
+            py:with="field_type = field_types.get('field_name')">
+          <strong>${field_name}</strong>
+          <py:choose>
+            <py:when test="field_name == 'attachment'">
+              <a href="${href.attachment('ticket', ticket.id, field.new)}"><em>${field.new}</em></a> added
+            </py:when>
+            <py:when test="field.old and field.new">
+              changed
+              <py:choose>
+                <py:when test="field_type == 'textarea'">
+                  (<a py:strip="'cnum' not in change" href="${href.ticket(ticket.id, action='diff', version=change.cnum)}">diff</a>)
+                </py:when>
+                <py:otherwise>
+                  from <em>${field.old}</em> to <em>${field.new}</em>
+                </py:otherwise>
+              </py:choose>
+            </py:when>
+            <py:when test="not field.old and field.new">
+              set
+              <py:if test="field_type != 'textarea'">
+                to <em>${field.new}</em>
+              </py:if>
+            </py:when>
+            <py:otherwise>deleted</py:otherwise>
+          </py:choose>
+        </li>
+      </ul>
+      <div py:if="'comment' in change" class="comment searchable">
+        ${wiki_to_html(context, change.comment)}
+      </div>
+    </py:def>
+
     <div id="content" class="ticket">
       <h1>
         <py:choose>
@@ -188,38 +223,7 @@
                   </py:otherwise>
                 </py:choose>
                 </h3>
-                <ul py:if="change.fields" class="changes">
-                  <li py:for="field_name, field in change.fields.items()"
-                      py:with="field_type = field_types.get('field_name')">
-                    <strong>${field_name}</strong>
-                    <py:choose>
-                      <py:when test="field_name == 'attachment'">
-                        <a href="${href.attachment('ticket', ticket.id, field.new)}"><em>${field.new}</em></a> added
-                      </py:when>
-                      <py:when test="field.old and field.new">
-                        changed
-                        <py:choose>
-                          <py:when test="field_type == 'textarea'">
-                            (<a py:strip="'cnum' not in change" href="${href.ticket(ticket.id, action='diff', version=change.cnum)}">diff</a>)
-                          </py:when>
-                          <py:otherwise>
-                            from <em>${field.old}</em> to <em>${field.new}</em>
-                          </py:otherwise>
-                        </py:choose>
-                      </py:when>
-                      <py:when test="not field.old and field.new">
-                        set
-                        <py:if test="field_type != 'textarea'">
-                          to <em>${field.new}</em>
-                        </py:if>
-                      </py:when>
-                      <py:otherwise>deleted</py:otherwise>
-                    </py:choose>
-                  </li>
-                </ul>
-                <div py:if="'comment' in change" class="comment searchable">
-                  ${wiki_to_html(context, change.comment)}
-                </div>
+                ${display_change(change)}
               </div>
             </form>
           </div>
