--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -65,20 +65,21 @@ h1 .status { color: #444; text-transform: lowercase; }
 }
 
 #changelog { border: 1px outset #996; padding: 1em }
-#changelog h3 {
+#preview { border: 1px outset #996; padding: 0 1em }
+#preview h3, #changelog h3 {
  border-bottom: 1px solid #d7d7d7;
  color: #999;
  font-size: 100%;
  font-weight: normal;
 }
-#changelog .threading, #changelog .inlinebuttons {
+#preview .threading, #changelog .threading, #changelog .inlinebuttons {
  float: right;
  position: relative;
  bottom: 0.3em;
 }
 
-#changelog .changes { list-style: square; margin-left: 2em; padding: 0 }
-#changelog .comment { margin-left: 2em }
+#preview .changes, #changelog .changes { list-style: square; margin-left: 2em; padding: 0 }
+#preview .comment, #changelog .comment { margin-left: 2em }
 
 form .field { margin-top: .75em; width: 100% }
 form #comment { width: 100% }
