--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -16,6 +16,15 @@
 div#ticket.ticketdraft {
  background: #f4f4f4 url(../draft.png);
 }
+div#ticketchange.ticketdraft {
+ padding: 0 1em;
+ margin: 1em 0;
+}
+div#ticketchange.ticketdraft h3 {
+ margin-top: .5em;
+}
+.preview-notice { font-weight: bold; }
+
 .ticketdraft {
  background: #f4f4f4 url(../draft.png);
  border: 1px outset #996;
