--- a/trac/htdocs/css/about.css
+++ b/trac/htdocs/css/about.css
@@ -14,5 +14,6 @@
   padding: 3px;
 }
 #content.about #config td.value { font-family: monospace; }
+#content.about #config tr.modified { background: #fee; }
 #content.about #config tr.modified td.value { font-weight: bold; }
 #content.about #config td.doc { padding: 3px 1em; }
