--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -217,7 +217,7 @@
       <py:if test="ticket.exists">
         <!--! do not show attachments for old versions of this ticket or for new tickets -->
         <py:if test="not version and version != 0 and ticket.exists">
-          ${list_of_attachments(context, attachments, attach_href)}
+          ${list_of_attachments(context, attachments, attachment_perm)}
         </py:if>
 
         <py:if test="ticket.exists and changes">
