--- a/trac/templates/macros.html
+++ b/trac/templates/macros.html
@@ -158,59 +158,55 @@
 
   <!--! Display a list of attachments
   -
-  -     'attachments' is a list of attachment data
-  -     'attachment_perm' is a function for check permissions for actions on attachments
+  -     'alist' is an AttachmentList object (see attachment.py)
   -     'compact' is used to switch between a compact list of attachments (e.g. as used for
   -       the wiki view) and an expanded list (e.g. as used for the ticket view)
   -->
-  <py:def function="list_of_attachments(context, attachments, attachment_perm, compact=False)">
-    <py:def function="show_one_attachment(attachment)">
-      <a href="${context.href('attachment', context.realm, context.id, attachment.filename)}"
-         title="View attachment">$attachment.filename</a>
-      (${sizeinfo(attachment.size)}) - added by <em>${authorinfo(attachment.author)}</em>
-      ${dateinfo(attachment.date)} ago.
+  <py:def function="list_of_attachments(alist, compact=False)">
+    <py:def function="show_one_attachment(ctx)">
+      <py:with vars="attachment = ctx.resource">
+        <a href="${ctx.get_href(href)}" title="View attachment">$attachment.filename</a>
+        (${sizeinfo(attachment.size)}) - added by <em>${authorinfo(attachment.author)}</em>
+        ${dateinfo(attachment.date)} ago.
+      </py:with>
     </py:def>
     <py:choose test="">
-      <py:when test="compact and attachments">
+      <py:when test="compact and alist.attachments">
         <h3>Attachments</h3>
         <ul>
-          <py:for each="attachment in attachments" py:with="ctx = context('attachment', attachment.filename)">
-            <li py:if="attachment_perm('VIEW',req, ctx)">
-              ${show_one_attachment(attachment)}
-              <q py:if="compact and attachment.description">${wiki_to_oneliner(ctx, attachment.description)}</q>
+          <py:for each="ctx in alist.attachments">
+            <li py:if="attachments.has_perm('VIEW', ctx)">
+              ${show_one_attachment(ctx)}
+              <q py:if="compact and ctx.resource.description">${wiki_to_oneliner(ctx, ctx.resource.description)}</q>
             </li>
           </py:for>
         </ul>
       </py:when>
       <py:when test="not compact">
         <h2>Attachments</h2>
-        <div py:if="attachments or attach_href" id="attachments">
-          <dl py:if="attachments" class="attachments">
-            <py:for each="attachment in attachments"
-              py:with="ctx = context('attachment', attachment.filename)">
-              <py:if test="attachment_perm('VIEW',req, ctx)">
-                <dt>${show_one_attachment(attachment)}</dt>
-                <dd py:if="attachment.description">
-                  ${wiki_to_oneliner(ctx, attachment.description)}
+        <div py:if="alist.attachments or alist.has_perm('CREATE')" id="attachments">
+          <dl py:if="alist.attachments" class="attachments">
+            <py:for each="ctx in alist.attachments">
+              <py:if test="alist.has_perm('VIEW', ctx)">
+                <dt>${show_one_attachment(ctx)}</dt>
+                <dd py:if="ctx.resource.description">
+                  ${wiki_to_oneliner(ctx, ctx.resource.description)}
                 </dd>
               </py:if>
             </py:for>
           </dl>
-          <form py:if="attachment_perm('CREATE',req, context)" method="get"
-            action="${context.href('attachment', context.realm, context.id, action='new')}">
-            <div>
-              <input type="hidden" name="action" value="new" />
-              <input type="submit" value="Attach File" />
-            </div>
-          </form>
+          ${attach_file_form(alist)}
         </div>
       </py:when>
     </py:choose>
   </py:def>
 
-  <py:def function="attach_file_form(context, attachment_perm)">
-    <form py:if="attachment_perm('CREATE', req, context)" method="get"
-          action="${context.href('attachment', context.realm, context.id, action='new')}">
+  <!--! Conditionally render an ''Attach File'' button
+  -
+  -     'alist' is an AttachmentList object (see attachment.py)
+  -->
+  <py:def function="attach_file_form(alist)">
+    <form py:if="alist.has_perm('CREATE')" method="get" action="${alist.attach_href()}">
       <div>
         <input type="hidden" name="action" value="new" />
         <input type="submit" value="Attach file" />
